// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate-variables css/flame/index.css should output the right CSS 1`] = `
":root {
  --cr-white: #fff;
  --fl-white: #fff;
  --cr-black: #000;
  --fl-black: #000;
  --cr-maple-50: #FFF5F5;
  --fl-maple-50: #FFF5F5;
  --cr-maple-100: #FDD6D7;
  --fl-maple-100: #FDD6D7;
  --cr-maple-200: #FBB9BB;
  --fl-maple-200: #FBB9BB;
  --cr-maple-300: #F58286;
  --fl-maple-300: #F58286;
  --cr-maple-400: #ED5153;
  --fl-maple-400: #ED5153;
  --cr-maple-500: #DE2E37;
  --fl-maple-500: #DE2E37;
  --cr-maple-600: #CC1820;
  --fl-maple-600: #CC1820;
  --cr-maple-700: #B30A11;
  --fl-maple-700: #B30A11;
  --cr-maple-800: #950307;
  --fl-maple-800: #950307;
  --cr-maple-900: #710003;
  --fl-maple-900: #710003;
  --cr-maple-1000: #4D0001;
  --fl-maple-1000: #4D0001;
  --cr-blue-50: #F5F7FF;
  --fl-blue-50: #F5F7FF;
  --cr-blue-100: #D6DFFD;
  --fl-blue-100: #D6DFFD;
  --cr-blue-200: #B9C8FB;
  --fl-blue-200: #B9C8FB;
  --cr-blue-300: #829FF5;
  --fl-blue-300: #829FF5;
  --cr-blue-400: #537DEC;
  --fl-blue-400: #537DEC;
  --cr-blue-500: #2E61DE;
  --fl-blue-500: #2E61DE;
  --cr-blue-600: #1844CC;
  --fl-blue-600: #1844CC;
  --cr-blue-700: #0A2BB3;
  --fl-blue-700: #0A2BB3;
  --cr-blue-800: #031795;
  --fl-blue-800: #031795;
  --cr-blue-900: #000A71;
  --fl-blue-900: #000A71;
  --cr-blue-1000: #00034D;
  --fl-blue-1000: #00034D;
  --cr-green-50: #F5FFF6;
  --fl-green-50: #F5FFF6;
  --cr-green-100: #D8FCDC;
  --fl-green-100: #D8FCDC;
  --cr-green-200: #BCFAC5;
  --fl-green-200: #BCFAC5;
  --cr-green-300: #88F398;
  --fl-green-300: #88F398;
  --cr-green-400: #5BE873;
  --fl-green-400: #5BE873;
  --cr-green-500: #38DA57;
  --fl-green-500: #38DA57;
  --cr-green-600: #1FC641;
  --fl-green-600: #1FC641;
  --cr-green-700: #0EAD30;
  --fl-green-700: #0EAD30;
  --cr-green-800: #059118;
  --fl-green-800: #059118;
  --cr-green-900: #006F07;
  --fl-green-900: #006F07;
  --cr-green-1000: #014D00;
  --fl-green-1000: #014D00;
  --cr-orange-50: #FFFBF5;
  --fl-orange-50: #FFFBF5;
  --cr-orange-100: #FFEDD4;
  --fl-orange-100: #FFEDD4;
  --cr-orange-200: #FFDFB4;
  --fl-orange-200: #FFDFB4;
  --cr-orange-300: #FCC37A;
  --fl-orange-300: #FCC37A;
  --cr-orange-400: #F5A647;
  --fl-orange-400: #F5A647;
  --cr-orange-500: #EA891E;
  --fl-orange-500: #EA891E;
  --cr-orange-600: #D5730C;
  --fl-orange-600: #D5730C;
  --cr-orange-700: #BB5C02;
  --fl-orange-700: #BB5C02;
  --cr-orange-800: #9A4800;
  --fl-orange-800: #9A4800;
  --cr-orange-900: #743300;
  --fl-orange-900: #743300;
  --cr-orange-1000: #4D2000;
  --fl-orange-1000: #4D2000;
  --cr-gray-50: #F2F5F8;
  --fl-gray-50: #F2F5F8;
  --cr-gray-100: #D7DCE1;
  --fl-gray-100: #D7DCE1;
  --cr-gray-200: #BCC4CA;
  --fl-gray-200: #BCC4CA;
  --cr-gray-300: #A3ABB3;
  --fl-gray-300: #A3ABB3;
  --cr-gray-400: #8B939B;
  --fl-gray-400: #8B939B;
  --cr-gray-500: #737B83;
  --fl-gray-500: #737B83;
  --cr-gray-600: #5C626A;
  --fl-gray-600: #5C626A;
  --cr-gray-700: #464A51;
  --fl-gray-700: #464A51;
  --cr-gray-800: #2F3137;
  --fl-gray-800: #2F3137;
  --cr-gray-850: #232429;
  --fl-gray-850: #232429;
  --cr-gray-900: #18191D;
  --fl-gray-900: #18191D;
  --cr-gray-950: #111214;
  --fl-gray-950: #111214;
  --cr-gray-1000: #020203;
  --fl-gray-1000: #020203;
  --cr-serif: serif;
  --fl-serif: serif;
  --cr-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
  --fl-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
  --cr-monospace: monospace;
  --fl-monospace: monospace;
  --cr-text-xxl: 2.25rem;
  --fl-text-xxl: 2.25rem;
  --cr-text-xl: 1.5rem;
  --fl-text-xl: 1.5rem;
  --cr-text-l: 1.125rem;
  --fl-text-l: 1.125rem;
  --cr-text: 1rem;
  --fl-text: 1rem;
  --cr-text-s: 0.875rem;
  --fl-text-s: 0.875rem;
  --cr-text-xs: 0.75rem;
  --fl-text-xs: 0.75rem;
  --cr-text-xxs: 0.5rem;
  --fl-text-xxs: 0.5rem;
  --cr-regular: 400;
  --fl-regular: 400;
  --cr-bold: 700;
  --fl-bold: 700;
  --cr-letter-spacing-normal: normal;
  --fl-letter-spacing-normal: normal;
  --cr-letter-spacing-1: 0.03125rem;
  --fl-letter-spacing-1: 0.03125rem;
  --cr-letter-spacing-2: 0.0625rem;
  --fl-letter-spacing-2: 0.0625rem;
  --cr-letter-spacing-3: 0.09375rem;
  --fl-letter-spacing-3: 0.09375rem;
  --cr-spacing-0: 0;
  --fl-spacing-0: 0;
  --cr-spacing-1: 0.375rem;
  --fl-spacing-1: 0.375rem;
  --cr-spacing-2: 0.75rem;
  --fl-spacing-2: 0.75rem;
  --cr-spacing-3: 1.125rem;
  --fl-spacing-3: 1.125rem;
  --cr-spacing-4: 1.5rem;
  --fl-spacing-4: 1.5rem;
  --cr-spacing-5: 1.875rem;
  --fl-spacing-5: 1.875rem;
  --cr-spacing-6: 2.25rem;
  --fl-spacing-6: 2.25rem;
  --cr-spacing-7: 2.625rem;
  --fl-spacing-7: 2.625rem;
  --cr-spacing-8: 3rem;
  --fl-spacing-8: 3rem;
  --cr-spacing-9: 3.375rem;
  --fl-spacing-9: 3.375rem;
  --cr-spacing-10: 3.75rem;
  --fl-spacing-10: 3.75rem;
  --cr-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
  --fl-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
  --cr-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
  --fl-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
  --cr-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
  --fl-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
  --cr-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
  --fl-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
  --cr-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
  --fl-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
  --cr-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
  --fl-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
  --cr-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
  --fl-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
  --cr-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
  --fl-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
  --cr-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
  --fl-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
  --cr-radius-1: 0.1875rem;
  --fl-radius-1: 0.1875rem;
  --cr-radius-2: 0.375rem;
  --fl-radius-2: 0.375rem;
  --cr-radius-circle: 50%;
  --fl-radius-circle: 50%;
  --cr-transition-duration-fast: 100ms;
  --fl-transition-duration-fast: 100ms;
  --cr-transition-duration-base: 200ms;
  --fl-transition-duration-base: 200ms;
  --cr-transition-duration-slow: 300ms;
  --fl-transition-duration-slow: 300ms;
}
"
`;

exports[`generate-variables css/oldskool/index.css should output the right CSS 1`] = `
":root {
  --cr-maple: #ed5153;
  --fl-maple: #ed5153;
  --cr-maple-100: #fee3e3;
  --fl-maple-100: #fee3e3;
  --cr-maple-200: #b93435;
  --fl-maple-200: #b93435;
  --cr-maple-300: #872525;
  --fl-maple-300: #872525;
  --cr-dive: #232a3b;
  --fl-dive: #232a3b;
  --cr-dive-100: #3c7797;
  --fl-dive-100: #3c7797;
  --cr-dive-200: #32637e;
  --fl-dive-200: #32637e;
  --cr-dive-300: #34495e;
  --fl-dive-300: #34495e;
  --cr-night: #0c0d0d;
  --fl-night: #0c0d0d;
  --cr-night-100: #383d3d;
  --fl-night-100: #383d3d;
  --cr-night-200: #212424;
  --fl-night-200: #212424;
  --cr-night-300: #181a1a;
  --fl-night-300: #181a1a;
  --cr-snow: #fff;
  --fl-snow: #fff;
  --cr-snow-100: #fcfcfc;
  --fl-snow-100: #fcfcfc;
  --cr-snow-200: #f3f3f3;
  --fl-snow-200: #f3f3f3;
  --cr-snow-300: #e1e4e5;
  --fl-snow-300: #e1e4e5;
  --cr-blue: #2875c6;
  --fl-blue: #2875c6;
  --cr-blue-100: #e9fafe;
  --fl-blue-100: #e9fafe;
  --cr-blue-200: #5187e0;
  --fl-blue-200: #5187e0;
  --cr-blue-300: #1d5794;
  --fl-blue-300: #1d5794;
  --cr-green: #35b858;
  --fl-green: #35b858;
  --cr-green-100: #e0f8e6;
  --fl-green-100: #e0f8e6;
  --cr-green-200: #3dd164;
  --fl-green-200: #3dd164;
  --cr-green-300: #26853f;
  --fl-green-300: #26853f;
  --cr-orange: #e69524;
  --fl-orange: #e69524;
  --cr-orange-100: #fdebd0;
  --fl-orange-100: #fdebd0;
  --cr-orange-200: #f39c26;
  --fl-orange-200: #f39c26;
  --cr-orange-300: #996318;
  --fl-orange-300: #996318;
  --cr-yellow: #f1f326;
  --fl-yellow: #f1f326;
  --cr-yellow-100: #fdfcd4;
  --fl-yellow-100: #fdfcd4;
  --cr-yellow-200: #ecde36;
  --fl-yellow-200: #ecde36;
  --cr-yellow-300: #9e941f;
  --fl-yellow-300: #9e941f;
  --cr-gray: #494c4c;
  --fl-gray: #494c4c;
  --cr-gray-100: #c4cacc;
  --fl-gray-100: #c4cacc;
  --cr-gray-200: #abb3b3;
  --fl-gray-200: #abb3b3;
  --cr-gray-300: #848a8a;
  --fl-gray-300: #848a8a;
  --cr-seal: #737883;
  --fl-seal: #737883;
  --cr-seal-100: #9ba0ab;
  --fl-seal-100: #9ba0ab;
  --cr-seal-200: #505765;
  --fl-seal-200: #505765;
  --cr-seal-300: #393f4c;
  --fl-seal-300: #393f4c;
  --cr-serif: serif;
  --fl-serif: serif;
  --cr-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
  --fl-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
  --cr-monospace: monospace;
  --fl-monospace: monospace;
  --cr-text-xxl: 2.25rem;
  --fl-text-xxl: 2.25rem;
  --cr-text-xl: 1.5rem;
  --fl-text-xl: 1.5rem;
  --cr-text-l: 1.125rem;
  --fl-text-l: 1.125rem;
  --cr-text: 1rem;
  --fl-text: 1rem;
  --cr-text-s: 0.875rem;
  --fl-text-s: 0.875rem;
  --cr-text-xs: 0.75rem;
  --fl-text-xs: 0.75rem;
  --cr-text-xxs: 0.5rem;
  --fl-text-xxs: 0.5rem;
  --cr-regular: 400;
  --fl-regular: 400;
  --cr-bold: 700;
  --fl-bold: 700;
  --cr-letter-spacing-normal: normal;
  --fl-letter-spacing-normal: normal;
  --cr-letter-spacing-1: 0.03125rem;
  --fl-letter-spacing-1: 0.03125rem;
  --cr-letter-spacing-2: 0.0625rem;
  --fl-letter-spacing-2: 0.0625rem;
  --cr-letter-spacing-3: 0.09375rem;
  --fl-letter-spacing-3: 0.09375rem;
  --cr-spacing-0: 0;
  --fl-spacing-0: 0;
  --cr-spacing-1: 0.375rem;
  --fl-spacing-1: 0.375rem;
  --cr-spacing-2: 0.75rem;
  --fl-spacing-2: 0.75rem;
  --cr-spacing-3: 1.125rem;
  --fl-spacing-3: 1.125rem;
  --cr-spacing-4: 1.5rem;
  --fl-spacing-4: 1.5rem;
  --cr-spacing-5: 1.875rem;
  --fl-spacing-5: 1.875rem;
  --cr-spacing-6: 2.25rem;
  --fl-spacing-6: 2.25rem;
  --cr-spacing-7: 2.625rem;
  --fl-spacing-7: 2.625rem;
  --cr-spacing-8: 3rem;
  --fl-spacing-8: 3rem;
  --cr-spacing-9: 3.375rem;
  --fl-spacing-9: 3.375rem;
  --cr-spacing-10: 3.75rem;
  --fl-spacing-10: 3.75rem;
  --cr-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
  --fl-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
  --cr-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
  --fl-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
  --cr-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
  --fl-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
  --cr-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
  --fl-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
  --cr-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
  --fl-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
  --cr-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
  --fl-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
  --cr-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
  --fl-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
  --cr-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
  --fl-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
  --cr-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
  --fl-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
  --cr-radius-1: 0.1875rem;
  --fl-radius-1: 0.1875rem;
  --cr-radius-2: 0.375rem;
  --fl-radius-2: 0.375rem;
  --cr-radius-circle: 50%;
  --fl-radius-circle: 50%;
  --cr-transition-duration-fast: 100ms;
  --fl-transition-duration-fast: 100ms;
  --cr-transition-duration-base: 200ms;
  --fl-transition-duration-base: 200ms;
  --cr-transition-duration-slow: 300ms;
  --fl-transition-duration-slow: 300ms;
}
"
`;

exports[`generate-variables index.css should output the right CSS 1`] = `
":root {
  --cr-maple: #ed5153;
  --fl-maple: #ed5153;
  --cr-maple-100: #fee3e3;
  --fl-maple-100: #fee3e3;
  --cr-maple-200: #b93435;
  --fl-maple-200: #b93435;
  --cr-maple-300: #872525;
  --fl-maple-300: #872525;
  --cr-dive: #232a3b;
  --fl-dive: #232a3b;
  --cr-dive-100: #3c7797;
  --fl-dive-100: #3c7797;
  --cr-dive-200: #32637e;
  --fl-dive-200: #32637e;
  --cr-dive-300: #34495e;
  --fl-dive-300: #34495e;
  --cr-night: #0c0d0d;
  --fl-night: #0c0d0d;
  --cr-night-100: #383d3d;
  --fl-night-100: #383d3d;
  --cr-night-200: #212424;
  --fl-night-200: #212424;
  --cr-night-300: #181a1a;
  --fl-night-300: #181a1a;
  --cr-snow: #fff;
  --fl-snow: #fff;
  --cr-snow-100: #fcfcfc;
  --fl-snow-100: #fcfcfc;
  --cr-snow-200: #f3f3f3;
  --fl-snow-200: #f3f3f3;
  --cr-snow-300: #e1e4e5;
  --fl-snow-300: #e1e4e5;
  --cr-blue: #2875c6;
  --fl-blue: #2875c6;
  --cr-blue-100: #e9fafe;
  --fl-blue-100: #e9fafe;
  --cr-blue-200: #5187e0;
  --fl-blue-200: #5187e0;
  --cr-blue-300: #1d5794;
  --fl-blue-300: #1d5794;
  --cr-green: #35b858;
  --fl-green: #35b858;
  --cr-green-100: #e0f8e6;
  --fl-green-100: #e0f8e6;
  --cr-green-200: #3dd164;
  --fl-green-200: #3dd164;
  --cr-green-300: #26853f;
  --fl-green-300: #26853f;
  --cr-orange: #e69524;
  --fl-orange: #e69524;
  --cr-orange-100: #fdebd0;
  --fl-orange-100: #fdebd0;
  --cr-orange-200: #f39c26;
  --fl-orange-200: #f39c26;
  --cr-orange-300: #996318;
  --fl-orange-300: #996318;
  --cr-yellow: #f1f326;
  --fl-yellow: #f1f326;
  --cr-yellow-100: #fdfcd4;
  --fl-yellow-100: #fdfcd4;
  --cr-yellow-200: #ecde36;
  --fl-yellow-200: #ecde36;
  --cr-yellow-300: #9e941f;
  --fl-yellow-300: #9e941f;
  --cr-gray: #494c4c;
  --fl-gray: #494c4c;
  --cr-gray-100: #c4cacc;
  --fl-gray-100: #c4cacc;
  --cr-gray-200: #abb3b3;
  --fl-gray-200: #abb3b3;
  --cr-gray-300: #848a8a;
  --fl-gray-300: #848a8a;
  --cr-seal: #737883;
  --fl-seal: #737883;
  --cr-seal-100: #9ba0ab;
  --fl-seal-100: #9ba0ab;
  --cr-seal-200: #505765;
  --fl-seal-200: #505765;
  --cr-seal-300: #393f4c;
  --fl-seal-300: #393f4c;
  --cr-serif: serif;
  --fl-serif: serif;
  --cr-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
  --fl-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
  --cr-monospace: monospace;
  --fl-monospace: monospace;
  --cr-text-xxl: 2.25rem;
  --fl-text-xxl: 2.25rem;
  --cr-text-xl: 1.5rem;
  --fl-text-xl: 1.5rem;
  --cr-text-l: 1.125rem;
  --fl-text-l: 1.125rem;
  --cr-text: 1rem;
  --fl-text: 1rem;
  --cr-text-s: 0.875rem;
  --fl-text-s: 0.875rem;
  --cr-text-xs: 0.75rem;
  --fl-text-xs: 0.75rem;
  --cr-text-xxs: 0.5rem;
  --fl-text-xxs: 0.5rem;
  --cr-regular: 400;
  --fl-regular: 400;
  --cr-bold: 700;
  --fl-bold: 700;
  --cr-letter-spacing-normal: normal;
  --fl-letter-spacing-normal: normal;
  --cr-letter-spacing-1: 0.03125rem;
  --fl-letter-spacing-1: 0.03125rem;
  --cr-letter-spacing-2: 0.0625rem;
  --fl-letter-spacing-2: 0.0625rem;
  --cr-letter-spacing-3: 0.09375rem;
  --fl-letter-spacing-3: 0.09375rem;
  --cr-spacing-0: 0;
  --fl-spacing-0: 0;
  --cr-spacing-1: 0.375rem;
  --fl-spacing-1: 0.375rem;
  --cr-spacing-2: 0.75rem;
  --fl-spacing-2: 0.75rem;
  --cr-spacing-3: 1.125rem;
  --fl-spacing-3: 1.125rem;
  --cr-spacing-4: 1.5rem;
  --fl-spacing-4: 1.5rem;
  --cr-spacing-5: 1.875rem;
  --fl-spacing-5: 1.875rem;
  --cr-spacing-6: 2.25rem;
  --fl-spacing-6: 2.25rem;
  --cr-spacing-7: 2.625rem;
  --fl-spacing-7: 2.625rem;
  --cr-spacing-8: 3rem;
  --fl-spacing-8: 3rem;
  --cr-spacing-9: 3.375rem;
  --fl-spacing-9: 3.375rem;
  --cr-spacing-10: 3.75rem;
  --fl-spacing-10: 3.75rem;
  --cr-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
  --fl-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
  --cr-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
  --fl-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
  --cr-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
  --fl-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
  --cr-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
  --fl-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
  --cr-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
  --fl-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
  --cr-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
  --fl-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
  --cr-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
  --fl-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
  --cr-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
  --fl-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
  --cr-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
  --fl-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
  --cr-radius-1: 0.1875rem;
  --fl-radius-1: 0.1875rem;
  --cr-radius-2: 0.375rem;
  --fl-radius-2: 0.375rem;
  --cr-radius-circle: 50%;
  --fl-radius-circle: 50%;
  --cr-transition-duration-fast: 100ms;
  --fl-transition-duration-fast: 100ms;
  --cr-transition-duration-base: 200ms;
  --fl-transition-duration-base: 200ms;
  --cr-transition-duration-slow: 300ms;
  --fl-transition-duration-slow: 300ms;
}
"
`;

exports[`generate-variables index.scss should output the right CSS 1`] = `
"$cr-namespace: 'cr-';

$fl-namespace: 'fl-';
$cr-maple: #ed5153;
$fl-maple: #ed5153;
$cr-maple-100: #fee3e3;
$fl-maple-100: #fee3e3;
$cr-maple-200: #b93435;
$fl-maple-200: #b93435;
$cr-maple-300: #872525;
$fl-maple-300: #872525;
$cr-dive: #232a3b;
$fl-dive: #232a3b;
$cr-dive-100: #3c7797;
$fl-dive-100: #3c7797;
$cr-dive-200: #32637e;
$fl-dive-200: #32637e;
$cr-dive-300: #34495e;
$fl-dive-300: #34495e;
$cr-night: #0c0d0d;
$fl-night: #0c0d0d;
$cr-night-100: #383d3d;
$fl-night-100: #383d3d;
$cr-night-200: #212424;
$fl-night-200: #212424;
$cr-night-300: #181a1a;
$fl-night-300: #181a1a;
$cr-snow: #fff;
$fl-snow: #fff;
$cr-snow-100: #fcfcfc;
$fl-snow-100: #fcfcfc;
$cr-snow-200: #f3f3f3;
$fl-snow-200: #f3f3f3;
$cr-snow-300: #e1e4e5;
$fl-snow-300: #e1e4e5;
$cr-blue: #2875c6;
$fl-blue: #2875c6;
$cr-blue-100: #e9fafe;
$fl-blue-100: #e9fafe;
$cr-blue-200: #5187e0;
$fl-blue-200: #5187e0;
$cr-blue-300: #1d5794;
$fl-blue-300: #1d5794;
$cr-green: #35b858;
$fl-green: #35b858;
$cr-green-100: #e0f8e6;
$fl-green-100: #e0f8e6;
$cr-green-200: #3dd164;
$fl-green-200: #3dd164;
$cr-green-300: #26853f;
$fl-green-300: #26853f;
$cr-orange: #e69524;
$fl-orange: #e69524;
$cr-orange-100: #fdebd0;
$fl-orange-100: #fdebd0;
$cr-orange-200: #f39c26;
$fl-orange-200: #f39c26;
$cr-orange-300: #996318;
$fl-orange-300: #996318;
$cr-yellow: #f1f326;
$fl-yellow: #f1f326;
$cr-yellow-100: #fdfcd4;
$fl-yellow-100: #fdfcd4;
$cr-yellow-200: #ecde36;
$fl-yellow-200: #ecde36;
$cr-yellow-300: #9e941f;
$fl-yellow-300: #9e941f;
$cr-gray: #494c4c;
$fl-gray: #494c4c;
$cr-gray-100: #c4cacc;
$fl-gray-100: #c4cacc;
$cr-gray-200: #abb3b3;
$fl-gray-200: #abb3b3;
$cr-gray-300: #848a8a;
$fl-gray-300: #848a8a;
$cr-seal: #737883;
$fl-seal: #737883;
$cr-seal-100: #9ba0ab;
$fl-seal-100: #9ba0ab;
$cr-seal-200: #505765;
$fl-seal-200: #505765;
$cr-seal-300: #393f4c;
$fl-seal-300: #393f4c;
$cr-serif: serif;
$fl-serif: serif;
$cr-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
$fl-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
$cr-monospace: monospace;
$fl-monospace: monospace;
$cr-text-xxl: 2.25rem;
$fl-text-xxl: 2.25rem;
$cr-text-xl: 1.5rem;
$fl-text-xl: 1.5rem;
$cr-text-l: 1.125rem;
$fl-text-l: 1.125rem;
$cr-text: 1rem;
$fl-text: 1rem;
$cr-text-s: 0.875rem;
$fl-text-s: 0.875rem;
$cr-text-xs: 0.75rem;
$fl-text-xs: 0.75rem;
$cr-text-xxs: 0.5rem;
$fl-text-xxs: 0.5rem;
$cr-regular: 400;
$fl-regular: 400;
$cr-bold: 700;
$fl-bold: 700;
$cr-letter-spacing-normal: normal;
$fl-letter-spacing-normal: normal;
$cr-letter-spacing-1: 0.03125rem;
$fl-letter-spacing-1: 0.03125rem;
$cr-letter-spacing-2: 0.0625rem;
$fl-letter-spacing-2: 0.0625rem;
$cr-letter-spacing-3: 0.09375rem;
$fl-letter-spacing-3: 0.09375rem;
$cr-spacing-0: 0;
$fl-spacing-0: 0;
$cr-spacing-1: 0.375rem;
$fl-spacing-1: 0.375rem;
$cr-spacing-2: 0.75rem;
$fl-spacing-2: 0.75rem;
$cr-spacing-3: 1.125rem;
$fl-spacing-3: 1.125rem;
$cr-spacing-4: 1.5rem;
$fl-spacing-4: 1.5rem;
$cr-spacing-5: 1.875rem;
$fl-spacing-5: 1.875rem;
$cr-spacing-6: 2.25rem;
$fl-spacing-6: 2.25rem;
$cr-spacing-7: 2.625rem;
$fl-spacing-7: 2.625rem;
$cr-spacing-8: 3rem;
$fl-spacing-8: 3rem;
$cr-spacing-9: 3.375rem;
$fl-spacing-9: 3.375rem;
$cr-spacing-10: 3.75rem;
$fl-spacing-10: 3.75rem;
$cr-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
$fl-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
$cr-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
$fl-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
$cr-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
$fl-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
$cr-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
$fl-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
$cr-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
$fl-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
$cr-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
$fl-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
$cr-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
$fl-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
$cr-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
$fl-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
$cr-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
$fl-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
$cr-radius-1: 0.1875rem;
$fl-radius-1: 0.1875rem;
$cr-radius-2: 0.375rem;
$fl-radius-2: 0.375rem;
$cr-radius-circle: 50%;
$fl-radius-circle: 50%;
$cr-transition-duration-fast: 100ms;
$fl-transition-duration-fast: 100ms;
$cr-transition-duration-base: 200ms;
$fl-transition-duration-base: 200ms;
$cr-transition-duration-slow: 300ms;
$fl-transition-duration-slow: 300ms;
"
`;

exports[`generate-variables sass/flame/index.scss should output the right CSS 1`] = `
"$cr-namespace: 'cr-';

$fl-namespace: 'fl-';
$cr-white: #fff;
$fl-white: #fff;
$cr-black: #000;
$fl-black: #000;
$cr-maple-50: #FFF5F5;
$fl-maple-50: #FFF5F5;
$cr-maple-100: #FDD6D7;
$fl-maple-100: #FDD6D7;
$cr-maple-200: #FBB9BB;
$fl-maple-200: #FBB9BB;
$cr-maple-300: #F58286;
$fl-maple-300: #F58286;
$cr-maple-400: #ED5153;
$fl-maple-400: #ED5153;
$cr-maple-500: #DE2E37;
$fl-maple-500: #DE2E37;
$cr-maple-600: #CC1820;
$fl-maple-600: #CC1820;
$cr-maple-700: #B30A11;
$fl-maple-700: #B30A11;
$cr-maple-800: #950307;
$fl-maple-800: #950307;
$cr-maple-900: #710003;
$fl-maple-900: #710003;
$cr-maple-1000: #4D0001;
$fl-maple-1000: #4D0001;
$cr-blue-50: #F5F7FF;
$fl-blue-50: #F5F7FF;
$cr-blue-100: #D6DFFD;
$fl-blue-100: #D6DFFD;
$cr-blue-200: #B9C8FB;
$fl-blue-200: #B9C8FB;
$cr-blue-300: #829FF5;
$fl-blue-300: #829FF5;
$cr-blue-400: #537DEC;
$fl-blue-400: #537DEC;
$cr-blue-500: #2E61DE;
$fl-blue-500: #2E61DE;
$cr-blue-600: #1844CC;
$fl-blue-600: #1844CC;
$cr-blue-700: #0A2BB3;
$fl-blue-700: #0A2BB3;
$cr-blue-800: #031795;
$fl-blue-800: #031795;
$cr-blue-900: #000A71;
$fl-blue-900: #000A71;
$cr-blue-1000: #00034D;
$fl-blue-1000: #00034D;
$cr-green-50: #F5FFF6;
$fl-green-50: #F5FFF6;
$cr-green-100: #D8FCDC;
$fl-green-100: #D8FCDC;
$cr-green-200: #BCFAC5;
$fl-green-200: #BCFAC5;
$cr-green-300: #88F398;
$fl-green-300: #88F398;
$cr-green-400: #5BE873;
$fl-green-400: #5BE873;
$cr-green-500: #38DA57;
$fl-green-500: #38DA57;
$cr-green-600: #1FC641;
$fl-green-600: #1FC641;
$cr-green-700: #0EAD30;
$fl-green-700: #0EAD30;
$cr-green-800: #059118;
$fl-green-800: #059118;
$cr-green-900: #006F07;
$fl-green-900: #006F07;
$cr-green-1000: #014D00;
$fl-green-1000: #014D00;
$cr-orange-50: #FFFBF5;
$fl-orange-50: #FFFBF5;
$cr-orange-100: #FFEDD4;
$fl-orange-100: #FFEDD4;
$cr-orange-200: #FFDFB4;
$fl-orange-200: #FFDFB4;
$cr-orange-300: #FCC37A;
$fl-orange-300: #FCC37A;
$cr-orange-400: #F5A647;
$fl-orange-400: #F5A647;
$cr-orange-500: #EA891E;
$fl-orange-500: #EA891E;
$cr-orange-600: #D5730C;
$fl-orange-600: #D5730C;
$cr-orange-700: #BB5C02;
$fl-orange-700: #BB5C02;
$cr-orange-800: #9A4800;
$fl-orange-800: #9A4800;
$cr-orange-900: #743300;
$fl-orange-900: #743300;
$cr-orange-1000: #4D2000;
$fl-orange-1000: #4D2000;
$cr-gray-50: #F2F5F8;
$fl-gray-50: #F2F5F8;
$cr-gray-100: #D7DCE1;
$fl-gray-100: #D7DCE1;
$cr-gray-200: #BCC4CA;
$fl-gray-200: #BCC4CA;
$cr-gray-300: #A3ABB3;
$fl-gray-300: #A3ABB3;
$cr-gray-400: #8B939B;
$fl-gray-400: #8B939B;
$cr-gray-500: #737B83;
$fl-gray-500: #737B83;
$cr-gray-600: #5C626A;
$fl-gray-600: #5C626A;
$cr-gray-700: #464A51;
$fl-gray-700: #464A51;
$cr-gray-800: #2F3137;
$fl-gray-800: #2F3137;
$cr-gray-850: #232429;
$fl-gray-850: #232429;
$cr-gray-900: #18191D;
$fl-gray-900: #18191D;
$cr-gray-950: #111214;
$fl-gray-950: #111214;
$cr-gray-1000: #020203;
$fl-gray-1000: #020203;
$cr-serif: serif;
$fl-serif: serif;
$cr-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
$fl-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
$cr-monospace: monospace;
$fl-monospace: monospace;
$cr-text-xxl: 2.25rem;
$fl-text-xxl: 2.25rem;
$cr-text-xl: 1.5rem;
$fl-text-xl: 1.5rem;
$cr-text-l: 1.125rem;
$fl-text-l: 1.125rem;
$cr-text: 1rem;
$fl-text: 1rem;
$cr-text-s: 0.875rem;
$fl-text-s: 0.875rem;
$cr-text-xs: 0.75rem;
$fl-text-xs: 0.75rem;
$cr-text-xxs: 0.5rem;
$fl-text-xxs: 0.5rem;
$cr-regular: 400;
$fl-regular: 400;
$cr-bold: 700;
$fl-bold: 700;
$cr-letter-spacing-normal: normal;
$fl-letter-spacing-normal: normal;
$cr-letter-spacing-1: 0.03125rem;
$fl-letter-spacing-1: 0.03125rem;
$cr-letter-spacing-2: 0.0625rem;
$fl-letter-spacing-2: 0.0625rem;
$cr-letter-spacing-3: 0.09375rem;
$fl-letter-spacing-3: 0.09375rem;
$cr-spacing-0: 0;
$fl-spacing-0: 0;
$cr-spacing-1: 0.375rem;
$fl-spacing-1: 0.375rem;
$cr-spacing-2: 0.75rem;
$fl-spacing-2: 0.75rem;
$cr-spacing-3: 1.125rem;
$fl-spacing-3: 1.125rem;
$cr-spacing-4: 1.5rem;
$fl-spacing-4: 1.5rem;
$cr-spacing-5: 1.875rem;
$fl-spacing-5: 1.875rem;
$cr-spacing-6: 2.25rem;
$fl-spacing-6: 2.25rem;
$cr-spacing-7: 2.625rem;
$fl-spacing-7: 2.625rem;
$cr-spacing-8: 3rem;
$fl-spacing-8: 3rem;
$cr-spacing-9: 3.375rem;
$fl-spacing-9: 3.375rem;
$cr-spacing-10: 3.75rem;
$fl-spacing-10: 3.75rem;
$cr-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
$fl-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
$cr-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
$fl-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
$cr-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
$fl-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
$cr-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
$fl-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
$cr-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
$fl-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
$cr-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
$fl-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
$cr-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
$fl-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
$cr-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
$fl-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
$cr-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
$fl-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
$cr-radius-1: 0.1875rem;
$fl-radius-1: 0.1875rem;
$cr-radius-2: 0.375rem;
$fl-radius-2: 0.375rem;
$cr-radius-circle: 50%;
$fl-radius-circle: 50%;
$cr-transition-duration-fast: 100ms;
$fl-transition-duration-fast: 100ms;
$cr-transition-duration-base: 200ms;
$fl-transition-duration-base: 200ms;
$cr-transition-duration-slow: 300ms;
$fl-transition-duration-slow: 300ms;
"
`;

exports[`generate-variables sass/oldskool/index.scss should output the right CSS 1`] = `
"$cr-namespace: 'cr-';

$fl-namespace: 'fl-';
$cr-maple: #ed5153;
$fl-maple: #ed5153;
$cr-maple-100: #fee3e3;
$fl-maple-100: #fee3e3;
$cr-maple-200: #b93435;
$fl-maple-200: #b93435;
$cr-maple-300: #872525;
$fl-maple-300: #872525;
$cr-dive: #232a3b;
$fl-dive: #232a3b;
$cr-dive-100: #3c7797;
$fl-dive-100: #3c7797;
$cr-dive-200: #32637e;
$fl-dive-200: #32637e;
$cr-dive-300: #34495e;
$fl-dive-300: #34495e;
$cr-night: #0c0d0d;
$fl-night: #0c0d0d;
$cr-night-100: #383d3d;
$fl-night-100: #383d3d;
$cr-night-200: #212424;
$fl-night-200: #212424;
$cr-night-300: #181a1a;
$fl-night-300: #181a1a;
$cr-snow: #fff;
$fl-snow: #fff;
$cr-snow-100: #fcfcfc;
$fl-snow-100: #fcfcfc;
$cr-snow-200: #f3f3f3;
$fl-snow-200: #f3f3f3;
$cr-snow-300: #e1e4e5;
$fl-snow-300: #e1e4e5;
$cr-blue: #2875c6;
$fl-blue: #2875c6;
$cr-blue-100: #e9fafe;
$fl-blue-100: #e9fafe;
$cr-blue-200: #5187e0;
$fl-blue-200: #5187e0;
$cr-blue-300: #1d5794;
$fl-blue-300: #1d5794;
$cr-green: #35b858;
$fl-green: #35b858;
$cr-green-100: #e0f8e6;
$fl-green-100: #e0f8e6;
$cr-green-200: #3dd164;
$fl-green-200: #3dd164;
$cr-green-300: #26853f;
$fl-green-300: #26853f;
$cr-orange: #e69524;
$fl-orange: #e69524;
$cr-orange-100: #fdebd0;
$fl-orange-100: #fdebd0;
$cr-orange-200: #f39c26;
$fl-orange-200: #f39c26;
$cr-orange-300: #996318;
$fl-orange-300: #996318;
$cr-yellow: #f1f326;
$fl-yellow: #f1f326;
$cr-yellow-100: #fdfcd4;
$fl-yellow-100: #fdfcd4;
$cr-yellow-200: #ecde36;
$fl-yellow-200: #ecde36;
$cr-yellow-300: #9e941f;
$fl-yellow-300: #9e941f;
$cr-gray: #494c4c;
$fl-gray: #494c4c;
$cr-gray-100: #c4cacc;
$fl-gray-100: #c4cacc;
$cr-gray-200: #abb3b3;
$fl-gray-200: #abb3b3;
$cr-gray-300: #848a8a;
$fl-gray-300: #848a8a;
$cr-seal: #737883;
$fl-seal: #737883;
$cr-seal-100: #9ba0ab;
$fl-seal-100: #9ba0ab;
$cr-seal-200: #505765;
$fl-seal-200: #505765;
$cr-seal-300: #393f4c;
$fl-seal-300: #393f4c;
$cr-serif: serif;
$fl-serif: serif;
$cr-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
$fl-sans-serif: Lato, Helvetica Neue, Helvetica, Arial, sans-serif;
$cr-monospace: monospace;
$fl-monospace: monospace;
$cr-text-xxl: 2.25rem;
$fl-text-xxl: 2.25rem;
$cr-text-xl: 1.5rem;
$fl-text-xl: 1.5rem;
$cr-text-l: 1.125rem;
$fl-text-l: 1.125rem;
$cr-text: 1rem;
$fl-text: 1rem;
$cr-text-s: 0.875rem;
$fl-text-s: 0.875rem;
$cr-text-xs: 0.75rem;
$fl-text-xs: 0.75rem;
$cr-text-xxs: 0.5rem;
$fl-text-xxs: 0.5rem;
$cr-regular: 400;
$fl-regular: 400;
$cr-bold: 700;
$fl-bold: 700;
$cr-letter-spacing-normal: normal;
$fl-letter-spacing-normal: normal;
$cr-letter-spacing-1: 0.03125rem;
$fl-letter-spacing-1: 0.03125rem;
$cr-letter-spacing-2: 0.0625rem;
$fl-letter-spacing-2: 0.0625rem;
$cr-letter-spacing-3: 0.09375rem;
$fl-letter-spacing-3: 0.09375rem;
$cr-spacing-0: 0;
$fl-spacing-0: 0;
$cr-spacing-1: 0.375rem;
$fl-spacing-1: 0.375rem;
$cr-spacing-2: 0.75rem;
$fl-spacing-2: 0.75rem;
$cr-spacing-3: 1.125rem;
$fl-spacing-3: 1.125rem;
$cr-spacing-4: 1.5rem;
$fl-spacing-4: 1.5rem;
$cr-spacing-5: 1.875rem;
$fl-spacing-5: 1.875rem;
$cr-spacing-6: 2.25rem;
$fl-spacing-6: 2.25rem;
$cr-spacing-7: 2.625rem;
$fl-spacing-7: 2.625rem;
$cr-spacing-8: 3rem;
$fl-spacing-8: 3rem;
$cr-spacing-9: 3.375rem;
$fl-spacing-9: 3.375rem;
$cr-spacing-10: 3.75rem;
$fl-spacing-10: 3.75rem;
$cr-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
$fl-shadow-1: 0 0.0625rem 0.125rem rgba(12, 13, 13, 0.15);
$cr-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
$fl-shadow-2: 0 0.125rem 0.25rem rgba(12, 13, 13, 0.15);
$cr-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
$fl-shadow-3: 0 0.1875rem 0.375rem rgba(12, 13, 13, 0.15);
$cr-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
$fl-shadow-4: 0 0.375rem 0.75rem rgba(12, 13, 13, 0.15);
$cr-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
$fl-shadow-5: 0 0.75rem 1.5rem rgba(12, 13, 13, 0.15);
$cr-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
$fl-inner-shadow-1: inset 0 0.0625rem 0.125rem rgba(56, 61, 61, 0.1);
$cr-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
$fl-inner-shadow-2: inset 0 0 0.375rem rgba(12, 13, 13, 0.18);
$cr-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
$fl-inner-shadow-n1: inset 0 -0.0625rem 0.1875rem rgba(12, 13, 13, 0.18);
$cr-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
$fl-border-shadow: 0 0 0 0.0625rem rgba(12, 13, 13, 0.15);
$cr-radius-1: 0.1875rem;
$fl-radius-1: 0.1875rem;
$cr-radius-2: 0.375rem;
$fl-radius-2: 0.375rem;
$cr-radius-circle: 50%;
$fl-radius-circle: 50%;
$cr-transition-duration-fast: 100ms;
$fl-transition-duration-fast: 100ms;
$cr-transition-duration-base: 200ms;
$fl-transition-duration-base: 200ms;
$cr-transition-duration-slow: 300ms;
$fl-transition-duration-slow: 300ms;
"
`;
